fixed app name em config.ru

--- a/views/hello.erb
+++ b/views/hello.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <img src="/images/screen.jpg" class="story-image"/>
-  <h1 class="story-title">Reception Artwork</h1>
+  <h1 class="story-title">Reception Artwork!!!</h1>
   <h3 class="story-place">@SoundCloud HQ</h3>
 
   <iframe width="100%" height="166" scrolling="no" 
